k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapps
  labels:
    name: webapps
    environment: production
